--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.12.0",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -27,8 +28,8 @@
     "next": "13.4.4",
     "next-sanity": "^4.3.3",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sanity": "^3.12.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
