--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.12.0",
     "@trendyol-js/react-carousel": "^3.0.2",
@@ -30,6 +31,9 @@
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "sanity": "^3.12.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
