--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.12.0",
+    "@stripe/stripe-js": "^2.1.0",
     "@trendyol-js/react-carousel": "^3.0.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
@@ -25,6 +27,7 @@
     "drizzle-orm": "^0.26.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "heroicons": "^2.0.18",
     "lucide-react": "^0.244.0",
     "next": "13.4.4",
     "next-sanity": "^4.3.3",
@@ -35,6 +38,7 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "sanity": "^3.12.0",
+    "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
